--- a/layouts/categories/taxonomy.html
+++ b/layouts/categories/taxonomy.html
@@ -6,7 +6,29 @@
   <div class="container pt-12 pb-28 relative">
     <h1 class="text-4xl mb-4 text-aa-gray-900 font-bold">{{ .Title }}</h1>
     {{ partial "marketing/sharingbutton" . }}
-    {{ partial "marketing/banner--section-single" . }} 
+    <!-- 사업별 소개내용 -->
+    <section id="introduction" class="container mx-auto py-2 bg-white">
+      <div class="main-question mb-8 flex flex-col divide-y text-base">
+        {{ range $.Site.Data.marketing.faq.listItem }}
+        <div class="item py-6 bg-aa-puple-500" x-data="{isOpen : false}">
+          <a href="#" class="flex items-center justify-between" @click.prevent="isOpen = true">
+            <h4 :class="{'text-aa-purple-500 font-bold' : isOpen == true}">{{ .question }}</h4>
+            <svg 
+              class="w-6 h-6 text-aa-purple-500"
+              fill="none" stroke-linecap="round" 
+              stroke-linejoin="round" stroke-width="2" 
+              viewBox="0 0 24 24" stroke="currentColor">
+              <path d="M19 9l-7 7-7-7"></path>
+            </svg>
+          </a>
+          <div x-show="isOpen" @click.away="isOpen = false" class="mt-3" :class="{'text-aa-gray-900 dark:text-gray-100' : isOpen == true}">
+            {{ .answer }}
+          </div>
+        </div>
+        {{ end }}
+      </div>
+    </section>
+    <!-- 활동 글 목록 -->
     {{ $paginator := .Paginate .RegularPages }}
      <ul class="list-board01">
       {{ range where .RegularPages "Params.pinned" true }}
