--- a/layouts/comfort-women/section_single.html
+++ b/layouts/comfort-women/section_single.html
@@ -1,12 +1,27 @@
 {{ define "main" }}
-  {{ if eq .RelPermalink "/about/donor-wall/" }}
+  {{ if eq .RelPermalink "/comfort-women/court-rullings" }}
   <div class="contents-area" id="main-content">
+    {{ .RelPermalink }}
     {{ partial "base/breadcrumb" . }}
     <div class="container pt-12 pb-28 relative">
       <h1 class="text-4xl mb-4 font-bold mb-8">{{ .Title }}</h1>
       {{ partial "marketing/sharingbutton" . }}
-      {{ partial "marketing/banner--section-single" . }}
-      {{ .Content }}
+
+      <div class="flex text-sm text-aa-700 py-2 border-aa-purple-500 border-b-2">
+        <span class="w-4/6 text-center">제목</span>
+        <span class="w-1/6 text-center">날짜</span>
+        <span class="w-1/6 text-center">작성자</span>
+      </div>
+      {{ $paginator := .Paginate .RegularPagesRecursive }}
+      <ul class="mb-20"> 
+        {{ range where .Pages "Params.pinned" true }}
+          {{ .Render "li" }}
+        {{ end }}
+        {{ range $paginator.Pages }}
+          {{ .Render "li" }}
+        {{ end }}
+      </ul>
+      {{ partial "app/pagination.html" $paginator }}
     </div>
   </div>
   {{ else }}
