--- a/layouts/shortcodes/activity/wednesday_demonstration.html
+++ b/layouts/shortcodes/activity/wednesday_demonstration.html
@@ -9,37 +9,86 @@
             }" 
             class="p-2 xl:p-8"
         >
-            <ul class="flex items-start justify-start text-3xl">
+            <ul class="flex items-start justify-start text-lg md:text-3xl">
                 <li @click="openTab = 1" :class="{ '-mb-px': openTab === 1 }" class="-mb-px mx-4 xl:mx-16">
-                    <a :class="openTab === 1 ? activeClasses : inactiveClasses" class="bg-white inline-block py-2 px-4 font-semibold" href="#{{ .의미.slug }}">{{ .의미.title }}</a>
+                    <a :class="openTab === 1 ? activeClasses : inactiveClasses" class="bg-white inline-block py-2 xl:px-4 font-semibold" href="#{{ .의미.slug }}">{{ .의미.title }}</a>
                 </li>
                 <li @click="openTab = 2" :class="{ '-mb-px': openTab === 2 }" class="mx-4 xl:mx-16">
-                    <a :class="openTab === 2 ? activeClasses : inactiveClasses" class="bg-white inline-block py-2 px-4 font-semibold" href="#{{ .연혁.slug }}">{{ .연혁.title }}</a>
+                    <a :class="openTab === 2 ? activeClasses : inactiveClasses" class="bg-white inline-block py-2 xl:px-4 font-semibold" href="#{{ .연혁.slug }}">{{ .연혁.title }}</a>
                 </li>
                 <li @click="openTab = 3" :class="{ '-mb-px': openTab === 3 }" class="mx-4 xl:mx-16">
-                    <a :class="openTab === 3 ? activeClasses : inactiveClasses" class="bg-white inline-block py-2 px-4 font-semibold" href="#{{ .참여.slug }}">{{ .참여.title }}</a>
+                    <a :class="openTab === 3 ? activeClasses : inactiveClasses" class="bg-white inline-block py-2 xl:px-4 font-semibold" href="#{{ .참여.slug }}">{{ .참여.title }}</a>
                 </li> 
                 <li @click="openTab = 4" :class="{ '-mb-px': openTab === 4 }" class="mx-4 xl:mx-16">
-                    <a :class="openTab === 4 ? activeClasses : inactiveClasses" class="bg-white inline-block py-2 px-4 font-semibold" href="{{ .이번주수요시위.url }}">{{ .이번주수요시위.title }}</a>
+                    <a :class="openTab === 4 ? activeClasses : inactiveClasses" class="bg-white inline-block py-2 xl:px-4 font-semibold" href="{{ .이번주수요시위.url }}">{{ .이번주수요시위.title }}</a>
                 </li>                    
             </ul>
             <div class="w-full pt-4">
-                <div x-show="openTab === 1">
-                    <div class="lg:flex justify-center py-12">
-                        <h2 class="lg:w-2/5 flex-shrink-0 text-aa-purple-500 text-2xl font-bold leading-tight mb-4">{{ .의미.title }}<br/><span class="mr-4"></span></h2>
+                <div x-show="openTab === 1 ">
+                    {{ with .의미 }}
+                    <div class="lg:flex justify-center pt-12 py-4">
+                        <h2 class="lg:w-2/5 flex-shrink-0 text-aa-purple-500 text-2xl font-bold leading-tight mb-4">{{ .title }}<br/><span class="mr-4"></span></h2>
                         <div class="text-lg">
-                            <p class="mb-7">정의기억연대는 일본군'위안부'피해생존자들이 겪었던 역사를 기억하고 교육하며,
-                                일본군 성노예제 문제 해결을 위해 활동하는 공간입니다. 지금도 일어나고 있는 전시성폭력 문제에 관심을 가지고 전쟁과 여성폭력 없는 세상을 위해 연대하고 행동하는 박물관입니다. </p>
+                            <p class="mb-7">{{ .section_01.body }} </p>
                         </div>
                     </div>
-                </div>          
+                    <div class="mb-8"> 
+                        <ul class="flex flex-wrap pt-6">
+                            <li class="lg:w-1/2 w-full">
+                                <span class="block overflow-hidden relative" style="padding-bottom:100%">
+                                    <img class="absolute w-full object-cover" src="{{ .wed_1차수요시위.src }}" alt="{{ .wed_1차수요시위.title }}">
+                                </span>
+                                <p class="mb-7 mt-7 text-lg font-bold text-center">{{ .wed_1차수요시위.title }}</p>
+                            </li>
+                            <li class="lg:w-1/2 w-full">
+                                <span class="block overflow-hidden relative" style="padding-bottom:100%">
+                                    <img class="absolute w-full" src="{{ .wed_500차수요시위.src }}" alt="{{ .wed_500차수요시위.title }}">
+                                </span>
+                                <p class="mb-7 mt-7 text-lg font-bold text-center">{{ .wed_500차수요시위.title }}</p>
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="lg:flex justify-center pt-12 py-4">
+                        <h2 class="lg:w-2/5 flex-shrink-0 text-aa-purple-500 text-2xl font-bold leading-tight mb-4">{{ .section_02.title }}<br/><span class="mr-4"></span></h2>
+                        <div class="text-lg">
+                            <p class="mb-7">{{ .section_02.body }}</p>
+                        </div>
+                    </div>
+                    <div class="mb-8"> 
+                        <ul class="flex flex-wrap pt-6">
+                            <li class="lg:w-1/4 w-full">
+                                <span class="block overflow-hidden relative" style="padding-bottom:100%">
+                                    <img class="absolute w-full object-cover" src="{{ .wed_700차수요시위.src }}" alt="{{ .wed_700차수요시위.title }}">
+                                </span>
+                                <p class="mb-7 mt-7 text-lg font-bold text-center">{{ .wed_700차수요시위.title }}</p>
+                            </li>
+                            <li class="lg:w-1/4 w-full">
+                                <span class="block overflow-hidden relative" style="padding-bottom:100%">
+                                    <img class="absolute w-full" src="{{ .wed_1000차수요시위및평화비건립.src }}" alt="{{ .wed_1000차수요시위및평화비건립.title }}">
+                                </span>
+                                <p class="mb-7 mt-7 text-lg font-bold text-center">{{ .wed_1000차수요시위및평화비건립.title }}</p>
+                            </li>
+                            <li class="lg:w-1/4 w-full">
+                                <span class="block overflow-hidden relative" style="padding-bottom:100%">
+                                    <img class="absolute w-full" src="{{ .wed_1300차수요시위.src }}" alt="{{ .wed_1300차수요시위.title }}">
+                                </span>
+                                <p class="mb-7 mt-7 text-lg font-bold text-center">{{ .wed_1300차수요시위.title }}</p>
+                            </li>
+                            <li class="lg:w-1/4 w-full">
+                                <span class="block overflow-hidden relative" style="padding-bottom:100%">
+                                    <img class="absolute w-full" src="{{ .wed_1300차수요시위및나비행진.src }}" alt="{{ .wed_1300차수요시위및나비행진.title }}">
+                                </span>
+                                <p class="mb-7 mt-7 text-lg font-bold text-center">{{ .wed_1300차수요시위및나비행진.title }}</p>
+                            </li>                                                                
+                        </ul>
+                    </div>
+                    {{ end }}
+                </div>
                 <div x-show="openTab === 2">
-                    <div class="lg:flex justify-center py-12">
+                    {{ with .연혁.수요시위연혁 }}
+                    <h2 class="lg:w-2/5 flex-shrink-0 text-aa-purple-500 text-2xl font-bold leading-tight mb-4 pt-12">{{ .title }}<br/><span class="mr-4"></span></h2>
+                    <div class="lg:flex justify-center py-6">
                         <div class="mb-20">
-                            {{ with .연혁.수요시위연혁 }}
-                            <div class="flex justify-between items-center mb-6 pb-6">
-                                <h2 class="lg:w-2/5 flex-shrink-0 text-aa-purple-500 text-2xl font-bold leading-tight mb-4">{{ .title }}</h2>
-                            </div>
                             <ul class="text-aa-gray-900 mb-14">
                                 {{ range .목록 }}
                                     <li class="lg:flex mb-4">
@@ -53,28 +102,21 @@
                                     </li>
                                 {{ end }}      
                             </ul>
-                            {{ end }}
                         </div>
                     </div>
+                    {{ end }}
                 </div>
                 <div x-show="openTab === 3">
+                    {{ with .참여 }}
                     <div class="lg:flex justify-center py-12">
-                        <h2 class="lg:w-2/5 flex-shrink-0 text-aa-purple-500 text-2xl font-bold leading-tight mb-4">{{ .참여.title }}</h2>
+                        <h2 class="lg:w-2/5 flex-shrink-0 text-aa-purple-500 text-2xl font-bold leading-tight mb-4">{{ .title }}</h2>
                         <div class="text-lg">
-                            <p class="mb-7">정의기억연대는 일본군'위안부'피해생존자들이 겪었던 역사를 기억하고 교육하며,
-                                일본군 성노예제 문제 해결을 위해 활동하는 공간입니다. 지금도 일어나고 있는 전시성폭력 문제에 관심을 가지고 전쟁과 여성폭력 없는 세상을 위해 연대하고 행동하는 박물관입니다. </p>
-                    
-                            <p class="mb-7">안전하고 평화로운 세상에서 아이들이 자라길 바랐던 일본군'위안부' 피해생존자들의 오랜 염원은 국내외 시민들의 공감을 불러일으켜 모금 활동으로 이어졌습니다. 기나긴 여정을 지나
-                            마침내 2012년 5월 5일 어린이날, 정의기억연대는 미래세대와 시민들에게 특별한 선물이 되어 문을 열었습니다. </p>
-                    
-                            <p class="mb-7">정의기억연대는 다양한 전시와 교육 프로그램을 통해 과거의 역사와 기억을 알리고,
-                            ‘여성, 인권, 평화’를 향한 현재의 활동을 기록함으로써 미래세대에게 더 나은 세상을 전하고자 합니다.</p>
-                    
-                            <p class="mb-7">초국적 시민 연대의 통로, 미래세대 교육의 장, 기억과 기록의 국제 플랫폼이 되고자 하는 이곳 정의기억연대 홈페이지에 여러분들의 지속적인 관심과 참여 부탁드립니다. </p>
-                    
-                            <p>감사합니다.</p>
+                            {{ range .body }}
+                                <p class="mb-7">{{ . }}</p>
+                            {{ end }}  
                         </div>
                     </div>
+                    {{ end }}
                 </div>
             </div>
         </div>
